--- a/src/main/resources/templates/general/general-menu.html
+++ b/src/main/resources/templates/general/general-menu.html
@@ -93,6 +93,14 @@
                     </button>
                 </a>
             </div>
+            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_REPORT_CART_VIEW')">
+                <a th:href="@{/general/report_card}">
+                    <button style="width: 300px; text-align: center" type="button"
+                            class="btn btn-outline-success btn-lg">
+                        Производственный табель
+                    </button>
+                </a>
+            </div>
         </td>
         <td>
             <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_STORE_PERS_INSTR_VIEW')">
